<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_representative_profile"
            android:layout_width="@dimen/profile_size"
            android:layout_height="@dimen/profile_size"
            android:layout_marginStart="@dimen/padding_8dp"
            android:contentDescription="@string/label_representative_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_office"
            style="@style/VoteHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_marginTop="@dimen/padding_8dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_representative_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="office" />

        <TextView
            android:id="@+id/tv_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:text="@{representative.official.name}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_web"
            app:layout_constraintStart_toStartOf="@+id/tv_office"
            app:layout_constraintTop_toBottomOf="@+id/tv_office"
            tools:text="name" />

        <TextView
            android:id="@+id/tv_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:layout_marginBottom="@dimen/padding_8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_web"
            app:layout_constraintStart_toStartOf="@+id/tv_name_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_text"
            tools:text="party" />

        <ImageView
            android:id="@+id/iv_web"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:contentDescription="@string/label_open_website"
            app:layout_constraintBottom_toBottomOf="@id/tv_party"
            app:layout_constraintEnd_toStartOf="@id/iv_facebook"
            app:layout_constraintTop_toBottomOf="@id/tv_office"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:contentDescription="@string/label_open_facebook"
            app:layout_constraintBottom_toBottomOf="@id/tv_party"
            app:layout_constraintEnd_toStartOf="@id/iv_twitter"
            app:layout_constraintTop_toBottomOf="@id/tv_office"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/padding_8dp"
            android:contentDescription="@string/label_open_twitter"
            app:layout_constraintBottom_toBottomOf="@id/tv_party"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_office"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
